@@ -7,6 +7,7 @@
  - New Bounding Box class;
  - Added character info text when mouse over portrait;
  - gui: defined mouse hint for all gui objects;
+ - dntMapEditor: Show mouse world coordinates;
  - Added support to MacOSX;
  - Added shader for texture splatting (splatting now can be via
    ARB extensions or GLSL shader);
